--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@phosphor-icons/vue": "^2.1.6",
         "dayjs": "^1.11.10"
     }
 }
